--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc -p .",
-    "test": "buidler test --show-stack-traces",
+    "test": "hardhat test --show-stack-traces",
     "lint": "tslint --format stylish --project .",
-    "lint:fix": "prettier --config ./prettier-config.json --write \"buidler.config.ts\" \"{src,test}/**/*.ts\""
+    "lint:fix": "prettier --config ./prettier-config.json --write \"hardhat.config.ts\" \"{src,test}/**/*.ts\""
   },
   "devDependencies": {
-    "@nomiclabs/buidler": "^1.4.7",
-    "@nomiclabs/buidler-ethers": "^2.0.0",
-    "@nomiclabs/buidler-waffle": "^2.1.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@types/chai": "^4.2.12",
     "@types/chai-as-promised": "^7.1.3",
     "@types/lodash": "^4.14.161",
@@ -20,6 +19,7 @@
     "@types/node": "^14.11.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "hardhat": "^2.0.2",
     "lodash": "^4.17.20",
     "mocha": "^8.1.3",
     "prettier": "^2.1.2",
